--- a/html/index.html
+++ b/html/index.html
@@ -9,20 +9,21 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="row col-sm" id="header">
         <div class="col-12">
-            <h1 class="col-sm">Réservations ateliers Rafale</h1>
+            <h1 class="col-sm text-danger">Réservations ateliers Rafale</h1>
         </div>
         <div class="col-12 row">
             <div class="col-10 info">
                 Entrez votre nom dans les plages ou vous allez être présent en atelier et clickez sur le bouton "Enregistrer" pour enregistrer votre présence. <br> Rafraichisez la page si vous voulez verifier que les noms affichés sont à jour.
             </div>
-            <div class="col-sm">
-                <button id="btn-save">Enregistrer</button>
+            <div class="col-sm row">
+                <button id="btn-save" class="btn btn-success col-12">Enregistrer</button>
             </div>
         </div>
     </div>
